--- a/doc/latex/pgfplots/style.css
+++ b/doc/latex/pgfplots/style.css
@@ -93,6 +93,24 @@ p span.texttt {
   word-break: break-word;
 }
 
+kbd, p span.texttt {
+  padding: 0.07em 0.14em;
+  margin: 0;
+  font-size: 85%;
+  background-color: hsl(240, 100%, 97%);
+  border: 1px solid hsl(240, 100%, 94%);
+}
+/* remove the above styling in some places */
+.entryheadline p span.texttt,
+.entryheadline kbd,
+p span.texttt.nobackground
+{
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  font-size: 88%;
+}
+
 pre {
   padding: 3pt;
 }
